# redwood-tui

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml
data/: aircraft-database-complete-2025-08.csv
src/: api.rs  app.rs  config.rs  db.rs  events.rs  lib.rs  location.rs  logging.rs  main.rs  models.rs  ui.rs
