[package]
name = "redwood-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI and Terminal handling
ratatui = "0.26"
crossterm = { version = "0.27", features = ["serde"] }

# Async and Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utils
color-eyre = "0.6"
chrono = "0.4"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
panic = 'abort'