[package]
name = "redwood-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI and Terminal handling
ratatui = "0.26"
crossterm = { version = "0.27", features = ["serde"] }

# Async and Networking
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utils
color-eyre = "0.6"
chrono = "0.4.35"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"]}
tracing-appender = "0.2"
csv = "1.4.0"

[profile.release]
opt-level = 3
lto = true 
codegen-units = 1
panic = 'abort'

# Path to avoid "Edition 2024". Need to fix later
[patch.crates-io]
time = { git = "https://github.com/time-rs/time", tag = "v0.3.36"}
